# site-galeria

./: .dockerignore  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  Dockerfile  FEATURE_3D_MODEL_VIEWER.md  MIGRACAO_DRUPAL.md  RELEASE_NOTES.md  TODO.md  TODO_ABOUT.md  config.py  dev.sh  docker-compose.yml  docker-run.sh  entrypoint.sh  main.py  manage.py  package-lock.json  pyproject.toml  railway.json
.playwright-mcp/: page-2026-04-29T15-18-50-566Z.yml  page-2026-04-29T15-19-13-973Z.yml  page-2026-04-29T15-19-25-426Z.yml  page-2026-04-29T15-19-39-022Z.yml
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_artifact_created_at_alter_artifact_description_and_more.py  0003_alter_collection_projects_collectionimage.py  0004_artifact_model_file.py  0005_artifact_annotations.py  0006_aboutsection_partnership_researcharea_teammember_and_more.py  0007_alter_aboutsection_options_alter_artifact_options_and_more.py  0008_aboutsection_values.py  0009_remove_slide_order.py  0010_alter_project_description.py  0011_navbar_expansion.py  0012_artifact_image.py  0013_artifact_category.py  0014_slide_order.py  0015_slide_subtitle_textfield.py
core/templatetags/: rich_text_filters.py
galeria/core/: admin.py  views.py
galeria/static/js/: main.js
lapomed/: apps.py
lapomed/static_src/: package-lock.json  package.json  tailwind.config.js
lapomed_gallery/: asgi.py  settings.py  urls.py  wsgi.py
quem_somos/: apps.py
staticfiles/: staticfiles.json
staticfiles/css/: style.css
staticfiles/js/: main.2abfb1ef22d5.js
(+17 files in other folders)
