[project]
name = "lapomed-usp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-jazzmin>=3.0.1",
    "django-tailwind>=4.4.2",
    "gunicorn>=23.0.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.8.2",
]
